Add SOP/Leads filter button to index.html

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     
     <div class="filters">
         <button class="filter-btn active" onclick="filter('all', this)">All</button>
+        <button class="filter-btn" onclick="filter('sop', this)">💬 SOP / Leads</button>
         <button class="filter-btn" onclick="filter('code', this)">Code</button>
         <button class="filter-btn" onclick="filter('login', this)">Login</button>
         <button class="filter-btn" onclick="filter('tech', this)">Tech</button>
